CMS-2172/CMS-2173/CMS-2178: fix replace bug, empty lines, popover visibility, CR comments

--- a/Bundles/ContentGui/assets/Zed/sass/main.scss
+++ b/Bundles/ContentGui/assets/Zed/sass/main.scss
@@ -60,29 +60,27 @@
 .content-item-editor {
     position: relative;
     display: inline-block;
-    padding: 10px 20px;
     border: 2px solid #2f4050;
     border-radius: 8px;
     background-color: rgba(68, 122, 173, 0.54);
 
-    &::after {
-        content: '';
-        position: absolute;
-        top: 0;
-        left: 0;
-        z-index: 2;
-        width: 100%;
-        height: 100%;
-    }
-
     * {
         color: #fff !important;
-        letter-spacing: 0.5px;
     }
 
-    p {
+    & > span {
+        display: block;
+        margin-bottom: 5px;
+        padding: 0 20px;
+        letter-spacing: 0.5px;
+
+        &:first-child {
+            padding-top: 10px;
+        }
+
         &:last-child {
             margin-bottom: 0;
+            padding-bottom: 10px;
         }
     }
 }
